--- a/EllipticCurves2020/biblio.bib
+++ b/EllipticCurves2020/biblio.bib
@@ -1,46 +1,35 @@
 @book{Silverman2009,
   title={The arithmetic of elliptic curves},
   author={Silverman, Joseph H},
-  volume={106},
-  year={2009},
-  publisher={Springer Science \& Business Media}
+  year={2009}
 }
 
 @book{Menezes1993,
 	title={Elliptic Curve Public Key Cryptosystems},
 	author={Menezes, Alfred J},
-	volume={234},
-	year={1993},
-	publisher={Springer Science \& Business Media}
+	year={1993}
 }
 
 @book{Blake1999,
 	title={Elliptic curves in cryptography},
 	author={Blake, Ian and Seroussi, Gerald and Seroussi, Gadiel and Smart, Nigel},
-	volume={265},
-	year={1999},
-	publisher={Cambridge university press}
+	year={1999}
 }
 
 @book{HankersonMenezesVanstone2006,
 	title={Guide to elliptic curve cryptography},
 	author={Hankerson, Darrel and Menezes, Alfred J and Vanstone, Scott},
-	year={2006},
-	publisher={Springer Science \& Business Media}
+	year={2006}
 }
 
 @book{Washington2008,
 	title={Elliptic curves: number theory and cryptography},
 	author={Washington, Lawrence C},
-	year={2008},
-	publisher={CRC press}
+	year={2008}
 }
 
 @inproceedings{JouxVitse2012,
 	title={Cover and decomposition index calculus on elliptic curves made practical},
 	author={Joux, Antoine and Vitse, Vanessa},
-	booktitle={Annual International Conference on the Theory and Applications of Cryptographic Techniques},
-	pages={9--26},
-	year={2012},
-	organization={Springer}
+	year={2012}
 }
