--- a/EllipticCurves2020/beamerthemeec2020.sty
+++ b/EllipticCurves2020/beamerthemeec2020.sty
@@ -8,17 +8,20 @@
 \RequirePackage{textcomp}
 \RequirePackage{amsmath,amssymb}
 
+\usepackage{xcolor}
+
 \usepackage{cmap}
 \usepackage{euler}
 \usepackage{fontspec}
 \usepackage{fontawesome}
 
-%\usepackage{ragged2e}
+\usepackage{ragged2e}
+\usepackage{hyphenat}
 
 \setmainfont{Roboto}
 \setsansfont{Roboto}
 \setmonofont{Roboto Mono}
-
+\usefonttheme{professionalfonts}
 
 %\renewcommand\rmdefault{qtm}
 %\renewcommand\sfdefault{qhv}
@@ -37,70 +40,46 @@
 \usepackage{varwidth}
 \usepackage{tabularx}
 
+\definecolor{text-color}  {RGB}{0,0,0} %%% text color
+\definecolor{subsection-color}  {RGB}{40, 166, 103} %%% subsection color
+\definecolor{title-and-section-color}  {RGB}{61, 147, 221} %%% title and section color
+\definecolor{bg-color}  {RGB}{254, 255, 244} %%% background color
+\definecolor{struct-color}  {RGB}{224, 62, 73} %%% structure
 
-%  \definecolor{color0}  {RGB}{0,0,0} %%% text color
-%  \definecolor{color1}  {RGB}{20,66,129} %%% title and subsection color
-%  \definecolor{color2}  {RGB}{28,130,185} %%% section color
-%  \definecolor{color3}  {RGB}{255,253,250} %%% background color
+\definecolor{color-cont-bg}  {RGB}{204, 239, 171}
+\definecolor{block-green-color-bg}{RGB}{204, 239, 171}
 
-  \definecolor{color0}  {RGB}{0,0,0} %%% text color
-  \definecolor{color1}  {RGB}{40, 166, 103} %%% subsection color
-  \definecolor{color2}  {RGB}{61, 147, 221} %%% title and section color
-  \definecolor{color3}  {RGB}{254, 255, 244} %%% background color
-  %\definecolor{color4}  {RGB}{246, 104, 103} %%% structure
-  %\definecolor{color4}  {RGB}{255, 64, 64} %%% structure
-  \definecolor{color4}  {RGB}{224, 62, 73} %%% structure
-  
-  \definecolor{color-cont-bg}  {RGB}{204, 239, 171}
+\setbeamercolor{structure}{fg=struct-color}
+\setbeamercolor{titlelike}{fg=title-and-section-color}
+\setbeamercolor{frametitle}{fg=title-and-section-color}
+\setbeamercolor{colorbar}{fg=text-color,bg=subsection-color}
+\setbeamercolor{normal text}{fg=text-color}
 
-
-%==============================================================================
-%==============================================================================
-
-%set the basic colors palette
-%   \setbeamercolor{palette primary}   {fg=color0,bg=color3}
-%   \setbeamercolor{palette secondary} {fg=color0,bg=color3}
-%   \setbeamercolor{palette tertiary}  {fg=color0,bg=color3}
-%   \setbeamercolor{palette quaternary}{fg=color0,bg=color3}
-%  \setbeamercolor{structure}{fg=color1}
-  \setbeamercolor{structure}{fg=color4}
-   \setbeamercolor{titlelike}         {fg=color2}
-%   \setbeamercolor{frametitle}        {bg=color2!10,fg=color2}
-   \setbeamercolor{frametitle}        {fg=color2}
-
-%
-  \setbeamercolor{colorbar}{fg=color0,bg=color1}
-  \setbeamercolor{normal text}{fg=color0}
-
-% background color
-  \beamertemplatesolidbackgroundcolor{color3}
-  %\beamertemplateshadingbackground{color3}{color3!70!color1}
+\beamertemplatesolidbackgroundcolor{bg-color}
 
 %set the fonts
-  \setbeamerfont{section in head/foot}{series=\bfseries}
-  \setbeamerfont{block title}{series=\bfseries}
-  \setbeamerfont{block alerted title}{series=\bfseries}
-  \setbeamerfont{frametitle}{series=\bfseries}
-  \setbeamerfont{frametitle}{size=\Large}
-  \setbeamerfont{caption}{size=\normalsize}
-  \setbeamerfont{caption name}{size=\normalsize}
-  
-  \setbeamerfont{structure}{series=\bfseries}
+\setbeamerfont{section in head/foot}{series=\bfseries}
+\setbeamerfont{block title}{series=\bfseries}
+\setbeamerfont{block alerted title}{series=\bfseries}
+\setbeamerfont{frametitle}{series=\bfseries}
+\setbeamerfont{frametitle}{size=\Large}
+\setbeamerfont{caption}{size=\normalsize}
+\setbeamerfont{caption name}{size=\normalsize}
+\setbeamerfont{structure}{series=\bfseries}
 
 %set some beamer theme options
-  \setbeamertemplate{title page}[default][colsep=-4bp,rounded=true]
-  \setbeamertemplate{sections/subsections in toc}[square]
-  \setbeamertemplate{items}[circle]
-  \setbeamertemplate{blocks}[width=0.0]
-  \beamertemplatenavigationsymbolsempty
+\setbeamertemplate{title page}[default][colsep=-4bp,rounded=true]
+\setbeamertemplate{sections/subsections in toc}[square]
+\setbeamertemplate{items}[circle]
+\setbeamertemplate{blocks}[width=0.0]
+\beamertemplatenavigationsymbolsempty
+
 %set bibliography style
- \setbeamertemplate{bibliography item}{\faBook}
- \setbeamercolor{bibliography item}{fg=color4,bg=color3}
- \setbeamercolor{bibliography entry author}{fg=color0,bg=color3}
- \setbeamercolor{bibliography entry note}{fg=color0,bg=color3}
- \setbeamerfont{bibliography item}{size=\footnotesize}
- \setbeamerfont{bibliography entry author}{size=\footnotesize}
-
-
+\setbeamertemplate{bibliography item}{\faBook}
+\setbeamercolor{bibliography item}{fg=struct-color,bg=bg-color}
+\setbeamercolor{bibliography entry author}{fg=text-color,bg=bg-color}
+\setbeamercolor{bibliography entry note}{fg=text-color,bg=bg-color}
+\setbeamerfont{bibliography item}{size=\footnotesize}
+\setbeamerfont{bibliography entry author}{size=\footnotesize}
 
 \titlegraphic{\flushright \includegraphics[height=1cm]{../ikbfu-logo.png}}
