EC-2020: slides for lecture 3

--- a/EllipticCurves2020/beamerthemeec2020.sty
+++ b/EllipticCurves2020/beamerthemeec2020.sty
@@ -91,3 +91,7 @@
 \setbeamerfont{bibliography entry author}{size=\footnotesize}
 
 \titlegraphic{\flushright \includegraphics[height=1cm]{../ikbfu-logo.png}}
+
+
+\uselanguage{russian}
+\languagepath{russian}
