--- a/EllipticCurves2020/lecture1/lecture1.tex
+++ b/EllipticCurves2020/lecture1/lecture1.tex
@@ -13,9 +13,6 @@
 \usepackage{cmap} % for russian text search support in pdf
 \usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
-%\usepackage{euler}
-%\usepackage{fontspec}
-%\setmainfont{TeX Gyre Pagella}
 
 %---tikz----
 \usepackage{tikz}
@@ -23,7 +20,7 @@
 \usepackage{pgfplots, subfigure}
 
 \usepackage{hyperref}
-\usepackage[backend=biber,hyperref=true,backref=true,style=alphabetic-verb]{biblatex}
+\usepackage[backend=biber,hyperref=true,firstinits=true,backref=true,style=alphabetic-verb]{biblatex}
 \bibliography{../biblio}
 
 
