--- a/EllipticCurves2020/lecture2_slides/lecture2_slides.tex
+++ b/EllipticCurves2020/lecture2_slides/lecture2_slides.tex
@@ -281,8 +281,8 @@
                 \item $Q \leftarrow \mathcal{O}$
                 \item \structure{for} $j = \ell - 1$ \structure{to} $0$ \structure{by} $-1$:\\
                 \quad$Q \leftarrow \left[ 2 \right]Q$ \\
-                \structure{if} ${K_j} = 1$:\\
-                \quad$Q \leftarrow Q + P$
+                \quad \structure{if} ${k_j} = 1$:\\
+                \quad\quad$Q \leftarrow Q + P$
                 \item \structure{return} $Q$
             \end{enumerate}
         \end{column}
