EC-2020: slides for lecture 4

--- a/EllipticCurves2020/biblio.bib
+++ b/EllipticCurves2020/biblio.bib
@@ -1,3 +1,10 @@
+
+@book{Lang1978,
+    title={Elliptic Curves: Diophantine Analysis},
+    author={Lang, Serge},
+    year={1978}
+}
+
 @book{Silverman2009,
   title={The arithmetic of elliptic curves},
   author={Silverman, Joseph H},
@@ -26,6 +33,12 @@
 	title={Elliptic curves: number theory and cryptography},
 	author={Washington, Lawrence C},
 	year={2008}
+}
+
+@book{vanTuyl1997,
+    title={The field of $n$-torsion points of an elliptic curve over a finite field},
+    author={van Tuyl, A. L.},
+    year={1997}
 }
 
 @inproceedings{JouxVitse2012,
