EC-2020: add slides for lecture 10 and etc.

--- a/EllipticCurves2020/biblio.bib
+++ b/EllipticCurves2020/biblio.bib
@@ -70,7 +70,13 @@
     year={2009}
 }
 
-@inproceedings{JouxVitse2012,
+@book{JaoDeFeo2011,
+    title={Towards quantum-resistant cryptosystems from supersingular elliptic curve isogenies},
+    author={Jao, David and De Feo, Luca},
+    year={2011}
+}
+
+@book{JouxVitse2012,
 	title={Cover and decomposition index calculus on elliptic curves made practical},
 	author={Joux, Antoine and Vitse, Vanessa},
 	year={2012}
@@ -80,6 +86,18 @@
     title={Mathematics of public key cryptography},
     author={Galbraith, Steven D},
     year={2012}
+}
+
+@book{Costello2019,
+    title={Supersingular Isogeny Key Exchange for Beginners},
+    author={Costello, Craig},
+    year={2019}
+}
+
+@online{SIKE,
+    title={SIKE – Supersingular Isogeny Key Encapsulation},
+    year={2020},
+    url={https://sike.org/}
 }
 
 @online{SafeCurves,
