--- a/EllipticCurves2020/lecture9_slides/lecture9_slides.tex
+++ b/EllipticCurves2020/lecture9_slides/lecture9_slides.tex
@@ -264,7 +264,7 @@ NFS (и его модификации): $L_{q^k}(1/3, c)$.
         \item $r = \#\left<P\right> \subseteq E(\mathbb{F}_q)$ -- простое число, $\#E(\mathbb{F}_q) / r$ -- малое число (стойкость к методу Полига-Хеллмана)
         \item $r \approx 2^{256}$ (стойкость к $\rho$-методу Полларда) 
         \item $q = p$ (стойкость к спуску Вейля)
-        \item $r \nmid q^k - 1$ для $k \geq 24$ (стойкость к атакам на спариваниях)
+        \item $r \nmid q^k - 1$ для $k \leq 24$ (стойкость к атакам на спариваниях)
         \item $r \neq p$ (кривая не аномальная)
     \end{enumerate}
 \end{frame}
