--- a/EllipticCurves2020/lecture7_slides/lecture7_slides.tex
+++ b/EllipticCurves2020/lecture7_slides/lecture7_slides.tex
@@ -167,7 +167,7 @@
         {\text{иное}}{\text{, вернуть }}p,q \hfill \\ 
     \end{gathered}  \right.$
     
-    \item \structure{for} всех простых $p_1 < B_1$ и $e_i: p_i^{e_i} < {B_2}$:\\
+    \item \structure{for} всех простых $p_i < B_1$ и $e_i: p_i^{e_i} < {B_2}$:\\
     \quad $
     P = [p_i^{e_i}] P{\text{ на }} E: y^2=x^3+a x + b
     $\\
