EC-2020: fix formuale in lecture 10

--- a/EllipticCurves2020/biblio.bib
+++ b/EllipticCurves2020/biblio.bib
@@ -88,6 +88,12 @@
     year={2012}
 }
 
+@book{DeFeo2018,
+    title={Exploring Isogeny Graphs},
+    author={De Feo, Luca},
+    year={2018}
+}
+
 @book{Costello2019,
     title={Supersingular Isogeny Key Exchange for Beginners},
     author={Costello, Craig},
