--- a/Lattices/Labs/TP1.tex
+++ b/Lattices/Labs/TP1.tex
@@ -26,6 +26,8 @@
 
 \usepackage{textcomp}
 
+\usepackage{kbordermatrix} % to label matrix rows and columns
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% THEOREMS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -33,18 +35,15 @@
 \usepackage{amsmath,amssymb,amsfonts}
 \usepackage{amsthm}
 
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{axiom}[theorem]{Axiom}
-\newtheorem{conclusion}[theorem]{Conclusion}
-\newtheorem{condition}[theorem]{Condition}
-\newtheorem{conjecture}[theorem]{Conjecture}
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{criterion}[theorem]{Criterion}
-\newtheorem{definition}[theorem]{Definition}
-\newtheorem{lemma}[theorem]{Lemma}
-\newtheorem{notation}[theorem]{Notation}
-\newtheorem{proposition}[theorem]{Proposition}
-
+\newtheorem{theorem}{Теорерма}
+\newtheorem{corollary}[theorem]{Следствие}
+\newtheorem{lemma}[theorem]{Лемма}
+\newtheorem{observation}[theorem]{Observation}
+\newtheorem{proposition}[theorem]{Предложение}
+\newtheorem{definition}[theorem]{Определение}
+\newtheorem{claim}[theorem]{Утверждение}
+\newtheorem{fact}[theorem]{Факт}
+\newtheorem{assumption}[theorem]{Предположение}
 
 \theoremstyle{definition}
 \newtheorem{problem}{Problem}
@@ -63,12 +62,16 @@
 \nc{\OO}{{{\mathbb O}}}
 \nc{\EE}{{{\mathbb E}}}
 
+\newcommand{\bigO}{\mathcal{O}}
+
 \newcommand{\val}{\operatorname{val}}
 
 \newcommand{\wt}{\ensuremath{\mathit{wt}}}
 \newcommand{\Id}{\ensuremath{I}}
 \newcommand{\transpose}{\mkern0.7mu^{\mathsf{ t}}}
 \newcommand*{\ScProd}[2]{\ensuremath{\langle#1\mathbin{,}#2\rangle}} %Scalar Product
+\newcommand*\abs[1]{\left\lvert#1\right\rvert}
+\newcommand*\norm[1]{\left\lVert#1\right\rVert}
 
 \pretolerance=1000
 
@@ -89,7 +92,7 @@
 \begin{center}
 	{\LARGE
 			Лабораторная работа № 1 \\[5pt]
-			\textbf{Алгоритм Копперсмита нахождения малых корней многочлена } \\[10pt]
+			\textbf{Атака на RSA c малым открытым ключом } \\[10pt]
 	 	{02.02.2021} 
  	} 
 \end{center}
@@ -98,9 +101,73 @@
 	\thispagestyle{empty}
 	
 	\vspace{0.2cm}
-	\section{}
+	\section{Алгоритм Копперсмита нахождения малых корней многочлена}
 	
-	\subsection{}
+	В основе атаки на одностороннюю функцию RSA лежит следующая теорема, доказанная Доном Копперсмитом в~\cite{Coppersmith}.
+	
+	\begin{theorem}\label{thm:Coppersmith}
+		Положим, $N$ -- целое, $f\in \ZZ[x]$ -- унитарный многочлен степени $n$. Положим далее, $X = N^{\frac{1}{n}-\varepsilon}$ для $\varepsilon>0$. Тогда существует алгоритм, который вернет все $|x_0| < X$, удовлетворяющие $f(x_0) =0 \bmod N$, за время, равному времени работы алгоритма LLL на решетки размерности $\bigO(\min\{ \frac{1}{\varepsilon}, \log_2 N \})$.
+	\end{theorem}
+
+	Прелесть это теоремы состоит в том, что модуль $N$ может быть составным числом (для простых модулей необходимости в использовании теоремы Копперсмита нет, так как существуют более быстрые алгоритмы нахождения корней).
+	
+	Далее мы докажем эту Теорему~\ref{thm:Coppersmith}. Начнем с результата, полученным Хогрейв-Хрэхэмом~\cite{HG}. Многочлену $h(x) = \sum_{i=0}^{n} a_i x^i \in \ZZ[x]$ будем сопоставлять вектор-коэффициентов $(a_i)_i\in \ZZ^{n_1}$ и определять квадрат нормы $\norm{h}^2 = \sum_i \abs{a_i}^2$. 
+	\begin{lemma}\label{lem:HG}
+		Пусть $h(x) \in \ZZ[x]$ -- многочлен степени $n$ и $X>0$ -- целое. Положим, $\norm{h(xX)} < N / \sqrt{n}$. Если $\abs{x_0} < X$ удовлетворяет $h(x_0) = 0 \bmod N$, то уравнение $h(x_0) = 0$ выполняется над $\ZZ$.
+	\end{lemma}
+	\begin{proof}
+	\begin{align*}
+		\abs{h(x_0)} &=\abs{\sum_i a_i x^i_0} = \abs{ \sum_i a_i X^i \left( \frac{x_0}{X} \right)^i} \leq \sum_i \abs{a_i X^i \left( \frac{x_0}{X} \right)^i} \\
+		& < \sum_i \abs{a_i X^i} \leq \sqrt{n} \norm{h(xX)} < N. 
+	\end{align*}
+	Из этого неравенства и условия $h(x_0) = 0 \bmod N$, следует $h(x_0) \equiv 0$. 
+	\end{proof}
+
+	Лемма~\ref{lem:HG} утверждает, что если $h$ -- многочлен малой нормы, то всего его корни $\bmod N$, также малые по абсолютному значению, являются его корнями над целыми числами. Следовательно, мы будем искать для многочлена $f(x)$ (необязательно малой нормы), многочлен $h(x)$ малой нормы, имеющий такие же корни, как $f(x)$. Очевидно, мы могли бы искать линейные комбинации многочленов вида $f, xf, x^2f, \ldots$, дающие малую норму. Однако, часто такие многочлены не дают желаемую нетривиальную линейную комбинацию. Поэтому Копперсмит предлагает добавлять в список многочленов степени $f(x)$, заметив, что если $f(x) = 0 \bmod N$, то $f(x)^i = 0 \bmod N^i$ для любого $i > 1$. В общем случае зададим для некоторого целого $m$\footnote{Более точный анализ показывает, что $m = \lceil \frac{1}{n\varepsilon} \rceil$, на практике $m$ выбирают небольшой константой.} многочлены
+	\[
+		g_{i,j}(x) = N^{m-i}x^jf(x)^i, \quad \text{ для } i = 0, \ldots, m-1, j = 0, \ldots n-1.
+	\]
+	Тогда $x_0$ -- корень многочлена $g_{i,j}(x)$ по модулю $N^m$ для всех $i \geq 0$. Теперь мы будем искать многочлен $h(x)$ -- линейную комбинацию многочленов $g_{i,j}(x)$, такую, что норма $h(xX)$ не превосходит $N^m$ (выбор многочленов $g_{i,j}(xX)$ позволяет увеличить границу с $N$ до $N^m$).
+	
+	Решим задачу поиска линейной комбинации с малой нормой. Сопоставляя многочленам $g_{i,j}(xX)$ вектора, составленные из их коэффициентов, задача поиска $h(x)$ сводится к поиску короткого вектора в решетке, образованной матрицей-коэффициентов, где в $i$-м столбце записан коэффициенты многочленов при $i$-ой степени $x$. Получим решетку размерности $w = nm$, базисом которой будет нижне-треугольная матрица (упорядочивая сначала по $i$, потом по $j$). Например, для $n=2, m=3$ матрица будет иметь вид
+	
+	\renewcommand{\kbldelim}{(}% Left delimiter
+	\renewcommand{\kbrdelim}{)}% Right delimiter
+	\[
+		\kbordermatrix{
+					& x^0 & x^1 & x^2 & x^3 & x^4 & x^5 \\
+		g_{0,0}(xX) & N^3 &  &  &  &  & \\
+		g_{0,1}(xX) & \star & N^3X &  &  &  & \\
+		g_{1,0}(xX) & \star & \star & N^2X^2 &  &  & \\
+		g_{1,1}(xX) & \star & \star & \star & N^2X^3 &  & \\
+		g_{2,0}(xX) & \star & \star & \star & \star & NX^4 &  \\
+		g_{2,1}(xX) & \star & \star & \star & \star & \star & NX^5
+	}
+	\]
+	
+	Позиции $\star$ соответствуют коэффициентам многочленов $g_{i,j}(xX)$, пустые позиции соответствуют нулям. Алгоритм LLL, запущенный для этого базиса (здесь базис задан векторами-строками, как в FPyLLL/Sage!), вернет вектор $v$ решётки, чья норма будет удовлетворять $\norm{v} \leq 2^{w} \det(L)^{1/w}$. Определитель решетки можно оценить как\footnote{Множители, ушедшие из-за аппроксимации в формуле ниже, учитываются в $\varepsilon$.}
+	\begin{align*}
+		\det(L) &= \prod_{i=0}^{m-1} N^{(m-i)n} \prod_{j=0}^{n-1} \prod_{i=0}^{m-1} X^j X^{ni} = \prod_{i=1}^{m} N^{in} \prod_{i=0}^{nm-1} X^i = \\
+		&= N^{\frac{m(m+1)n}{2}} X^{\frac{mn(mn-1)}{2}} \approx N^{\frac{m^2n}{2}}X^{\frac{m^2n^2}{2}}.
+	\end{align*}
+	
+	Для того, чтобы вектор $v$ (соответствующий многочлену $h(xX)$), полученный из алгоритма LLL удовлетворял условию Леммы~\ref{lem:HG}, необходимо выполнение неравенства
+	\begin{align*}
+		2^{w} \det(L)^{1/w} < \frac{N^m}{\sqrt{w}}.
+	\end{align*}
+	 
+	 Подставляя полученную аппроксимацию для $\det(L)$ и пренебрегая малыми множителями, условие выше дает
+	 \begin{align*}
+	 	\det(L) \leq N^{mw} \iff X \leq N^{1/n},
+	 \end{align*}
+	 
+	 что соответствует границе в Теореме~\ref{thm:Coppersmith} в точности до $\varepsilon$, возникающим вследствие аппроксимаций.
+	
+	\section{При чём тут RSA?}
+	
+	Схема шифрования и алгоритм подписи RSA основаны на односторонней функции вида $x \mapsto x^e \bmod N$, для некой $e \in \ZZ_N^\star$ (такое отображение называется ``односторонней функцией с потайным входом''\footnote{\url{https://en.wikipedia.org/wiki/Trapdoor\_function}}, так как зная $d = e^{-1} \bmod \phi(N)$ эту функцию можно эффективно обратить. Так \emph{небезопасная} версия шифрования сообщения $m$, вычисляет шифр-текст $c=m^e \bmod N$. Для того, чтобы сделать возведение в степень $e$ эффективным, некоторые реализации RSA выбирали $e=3$. В этой лабораторной вы убедитесь в том, что это плохая идея.
+	 
+	\section{Задание к лабораторной}
 		
 		
 \end{document}
