--- a/Lattices/Labs/TP1.tex
+++ b/Lattices/Labs/TP1.tex
@@ -165,8 +165,16 @@
 	
 	\section{При чём тут RSA?}
 	
-	Схема шифрования и алгоритм подписи RSA основаны на односторонней функции вида $x \mapsto x^e \bmod N$, для некой $e \in \ZZ_N^\star$ (такое отображение называется ``односторонней функцией с потайным входом''\footnote{\url{https://en.wikipedia.org/wiki/Trapdoor\_function}}, так как зная $d = e^{-1} \bmod \phi(N)$ эту функцию можно эффективно обратить. Так \emph{небезопасная} версия шифрования сообщения $m$, вычисляет шифр-текст $c=m^e \bmod N$. Для того, чтобы сделать возведение в степень $e$ эффективным, некоторые реализации RSA выбирали $e=3$. В этой лабораторной вы убедитесь в том, что это плохая идея.
+	\subsection{Стереотипные сообщения}
+	Схема шифрования и алгоритм подписи RSA основаны на односторонней функции вида $x \mapsto x^e \bmod N$, для некой $e \in \ZZ_N^\star$ (такое отображение называется ``односторонней функцией с потайным входом''\footnote{\url{https://en.wikipedia.org/wiki/Trapdoor\_function}}, так как зная $d = e^{-1} \bmod \phi(N)$ эту функцию можно эффективно обратить. Так \emph{небезопасная} версия шифрования сообщения $m$, вычисляет шифр-текст $c=m^e \bmod N$. 
+	
+	Для того, чтобы сделать возведение в степень $e$ эффективным, некоторые реализации RSA выбирали $e=3$. В этой лабораторной вы убедитесь в том, что это плохая идея. Например, если мы шифруем стереотипные сообщения, такие как ``ваш пароль на сегодня: XXXXX'', то шифр-текст такого сообщения есть $(S+x)^e \bmod N$, где $S$ -- известная часть сообщения, $x$ -- пароль. Тогда шифр-текст соответствует многочлену $f(x) = (S+x)^e - c \bmod N$, где неизвестная часть открытого текста $x$ -- его корень. Если шифрующая экспонента $e$ мала, алгоритм Копперсмита позволит эффективно найти $x$, так как размерность решетки будет небольшой. 
+	
 	 
+	\subsection{Случайная набивка (padding)}
+	
+	Эта атака на RSA была предложена Фрэнклином-Райтером в 1996 году. 
+	
 	\section{Задание к лабораторной}
 		
 		
