added missing files

--- a/Lattices/Labs/TP1.tex
+++ b/Lattices/Labs/TP1.tex
@@ -123,7 +123,7 @@
 	Из этого неравенства и условия $h(x_0) = 0 \bmod N$, следует $h(x_0) \equiv 0$. 
 	\end{proof}
 
-	Лемма~\ref{lem:HG} утверждает, что если $h$ -- многочлен малой нормы, то всего его корни $\bmod N$, также малые по абсолютному значению, являются его корнями над целыми числами. Следовательно, мы будем искать для многочлена $f(x)$ (необязательно малой нормы), многочлен $h(x)$ малой нормы, имеющий такие же корни, как $f(x)$. Очевидно, мы могли бы искать линейные комбинации многочленов вида $f, xf, x^2f, \ldots$, дающие малую норму. Однако, часто такие многочлены не дают желаемую нетривиальную линейную комбинацию. Поэтому Копперсмит предлагает добавлять в список многочленов степени $f(x)$, заметив, что если $f(x) = 0 \bmod N$, то $f(x)^i = 0 \bmod N^i$ для любого $i > 1$. В общем случае зададим для некоторого целого $m$\footnote{Более точный анализ показывает, что $m = \lceil \frac{1}{n\varepsilon} \rceil$, на практике $m$ выбирают небольшой константой.} многочлены
+	Лемма~\ref{lem:HG} утверждает, что если $h$ -- многочлен малой нормы, то всего его корни $\bmod~N$, также малые по абсолютному значению, являются его корнями над целыми числами. Следовательно, мы будем искать для многочлена $f(x)$ (необязательно малой нормы), многочлен $h(x)$ малой нормы, имеющий такие же корни, как $f(x)$. Очевидно, мы могли бы искать линейные комбинации многочленов вида $f, xf, x^2f, \ldots$, дающие малую норму. Однако, часто такие многочлены не дают желаемую нетривиальную линейную комбинацию. Поэтому Копперсмит предлагает добавлять в список многочленов степени $f(x)$, заметив, что если $f(x) = 0 \bmod N$, то $f(x)^i = 0 \bmod N^i$ для любого $i > 1$. В общем случае зададим для некоторого целого $m$\footnote{Более точный анализ показывает, что $m = \lceil \frac{1}{n\varepsilon} \rceil$, на практике $m$ выбирают небольшой константой.} многочлены
 	\[
 		g_{i,j}(x) = N^{m-i}x^jf(x)^i, \quad \text{ для } i = 0, \ldots, m-1, j = 0, \ldots n-1.
 	\]
@@ -168,14 +168,47 @@
 	\subsection{Стереотипные сообщения}
 	Схема шифрования и алгоритм подписи RSA основаны на односторонней функции вида $x \mapsto x^e \bmod N$, для некой $e \in \ZZ_N^\star$ (такое отображение называется ``односторонней функцией с потайным входом''\footnote{\url{https://en.wikipedia.org/wiki/Trapdoor\_function}}, так как зная $d = e^{-1} \bmod \phi(N)$ эту функцию можно эффективно обратить. Так \emph{небезопасная} версия шифрования сообщения $m$, вычисляет шифр-текст $c=m^e \bmod N$. 
 	
-	Для того, чтобы сделать возведение в степень $e$ эффективным, некоторые реализации RSA выбирали $e=3$. В этой лабораторной вы убедитесь в том, что это плохая идея. Например, если мы шифруем стереотипные сообщения, такие как ``ваш пароль на сегодня: XXXXX'', то шифр-текст такого сообщения есть $(S+x)^e \bmod N$, где $S$ -- известная часть сообщения, $x$ -- пароль. Тогда шифр-текст соответствует многочлену $f(x) = (S+x)^e - c \bmod N$, где неизвестная часть открытого текста $x$ -- его корень. Если шифрующая экспонента $e$ мала, алгоритм Копперсмита позволит эффективно найти $x$, так как размерность решетки будет небольшой. 
+	Для того, чтобы сделать возведение в степень $e$ эффективным, некоторые реализации RSA выбирали $e=3$.\footnote{Сегодня все реализации RSA отказались от такой шифрующей экспоненты.} В этой лабораторной вы убедитесь в том, что это плохая идея. Например, если мы шифруем стереотипные сообщения, такие как ``ваш пароль на сегодня: XXXXX'', то шифр-текст такого сообщения есть $(S+x)^e \bmod N$, где $S$ -- известная часть сообщения ``ваш пароль на сегодня: ', а пароль $x$ -- неизвестная. Тогда шифр-текст соответствует многочлену $f(x) = (S+x)^e - c \bmod N$, где неизвестная часть открытого текста $x$ -- его корень. Если шифрующая экспонента $e$ мала, алгоритм Копперсмита позволит эффективно найти $x$, так как размерность решетки будет небольшой. 
 	
 	 
 	\subsection{Случайная набивка (padding)}
 	
-	Эта атака на RSA была предложена Фрэнклином-Райтером в 1996 году. 
+	Эта атака на RSA была предложена Фрэнклином-Райтером в 1996 году.  Положим, открытые сообщения $m,m'$ связны соотношением $m = m'+r$, где $r$-- малое значение (например, если для шифрования $i$-го сообщения используется так называемая набивка $R_i = i < 2^k$ для ``рандомизации'' открытого текста, то $c_i = (m\cdot 2^k + i \bmod N)$\footnote{Очевидно, такой метод рандомизации не является безопасным}). Тогда для $e = 3$,
+	\begin{align*}
+		c &= m^3 \bmod N \\
+		c' &=(m+r)^3 \bmod N.
+	\end{align*}
+	Зная $c, c'$ и $r$, можно легко вычислить $m$. 
 	
+	Что если мы не знаем $r$, но знаем, что оно мало? Тогда два шифр-текста $c, c'$ дадут два уравнения 
+	\begin{align*}
+	m^3 - c = 0 \bmod N \\
+	(m+r)^3 - c' = 0\bmod N,
+	\end{align*}
+	в которых неизвестными являются $m,r$. Используя метод результант (классический метод исключения неизвестного из системы, нам в лабораторной понадобится только значение результанты), по переменной получим многочлен от одной переменной $r$.
+	\begin{align*}
+		\text{res}_m(m^3 - c, (m+r)^3 - c' ) = r^9 + (3c - 3c')r^6 + 3r^3(c^2 + 7cc'+c'^2) + (c-c')^3 \bmod N.
+	\end{align*}
+	Полученный многочлен $f(r)=r^9 + (3c - 3c')r^6 + 3r^3(c^2 + 7cc'+c'^2) + (c-c')^3 $ степени 9 имеет своим корнем искомое значение $r$. Если $r < N^{1/9}$, Теорема~\ref{thm:Coppersmith} вычислит этот корень.
 	\section{Задание к лабораторной}
 		
+	В этой лабораторной вам даны открытый ключ RSA $(N,e=3)$ и два шифр-текста $(c,c')$ для сообщений $(m,m')$, связанных неким малым $r$. Ваша задача -- найти $r$ и пару сообщений.
+	
+	Параметры заданы в файле \textsf{lab1\_input.txt} по ссылке \url{https://crypto-kantiana.com/elena.kirshanova/teaching/lattices_2021/lab1\_input.txt}.
+	
+	Для успешной атаки можете использовать $X=\lfloor 0.5 \cdot N^{1/9} \rfloor$, в определении $g_{i,j}$ можете взять $m = 5$.
+	
+	\begin{thebibliography}{9}
+		\bibitem{Coppersmith} 
+		Don Coppersmith.
+		\textit{Small solutions to polynomial equations, and low exponent RSA vulnerabilities}. 
+		Journal of Cryptology, 10:233--260, 1997
+		
+		\bibitem{HG} 
+		Nick Howgrave-Graham
+		\textit{Finding small roots of univariate modular equations revisited.}. 
+		Cryptography and Coding, volume 1355 of Lecture Notes in Computer Science,  131--142.
+		Springer-Verlag, 1997.
+	\end{thebibliography}	
 		
 \end{document}
