--- a/Lattices/Lecture_sieving/Lecture4.tex
+++ b/Lattices/Lecture_sieving/Lecture4.tex
@@ -584,11 +584,11 @@ $
 \tikzmark{end}
 \end{frame}
 
-\begin{frame}{Locality-sensitive filtering (Фильтрация по расстоянию)[BGJ15, BDGL16]}
-\tikzmark{start}
-\includegraphics[width=\textwidth]{LSF_explained_2_2}
-\tikzmark{end}
-\end{frame}
+%\begin{frame}{Locality-sensitive filtering (Фильтрация по расстоянию)[BGJ15, BDGL16]}
+%\tikzmark{start}
+%\includegraphics[width=\textwidth]{LSF_explained_2_2}
+%\tikzmark{end}
+%\end{frame}
 
 \begin{frame}{Locality-sensitive filtering (Фильтрация по расстоянию)[BGJ15, BDGL16]}
 \tikzmark{start}
@@ -671,7 +671,7 @@ $T = 2^{(0.292+\smallo(1))n}$
 $\abs{U}$?\\
 
 \tikzmark{start}
-%\includegraphics[width=\textwidth]{LSF_explained_4}
+\includegraphics[width=\textwidth]{LSF_explained_4}
 \tikzmark{end}
 \end{frame}
 
@@ -703,7 +703,7 @@ c & 1
 }.
 \end{align*}
 \pause
-For $\alpha=\beta = c = 1/2$, $P^{-1} = \left(\frac{3}{2}\right)^{n/2} = 2^{0.292n}$ 
+Для $\alpha=\beta = c = 1/2$, $P^{-1} = \left(\frac{3}{2}\right)^{n/2} = 2^{0.292n}$ 
 
 
 \end{frame}
