EC-2020: fix typos in lectures

--- a/EllipticCurves2019/lecture7/lecture7.tex
+++ b/EllipticCurves2019/lecture7/lecture7.tex
@@ -127,15 +127,15 @@
 
 \subsection{(p-1)-метод Полларда}
 
-Не умалаяя общности, $N = pq$ (легко обобщается на случай нескольких простых множителей)\\
+Не умаляя общности, $N = pq$ (легко обобщается на случай нескольких простых множителей)\\
 $p-1$ факторизуется на «малые» простые\\
 $q-1$ \underline{не} факторизуется на «малые» простые
 
-Точнее, $p-1 = \prod p_i^{e_i},\ p_i \leq B_1, p_i^{e_i} \leq B_2$ (такие $p$ называются "$B_1$-гладкими")
+Точнее, $p-1 = \prod p_i^{e_i},\ p_i \leq B_1, p_i^{e_i} \leq B_2$ (такие $p-1$ называются "$B_1$-гладкими")
 
 \underline{Идея метода:}
 \begin{itemize}
-    \item $\forall a \in \Z_n^*$ и $\forall K$ - кратное $p-1$:
+    \item $\forall a \in \Z_N^*$ и $\forall K$ - кратное $p-1$:
     \[
         a^k = (a^l)^{p-1} \equiv 1\ mod\ p
     \]
@@ -173,7 +173,7 @@ $q-1$ \underline{не} факторизуется на «малые» прост
 \begin{lemma}
 	Пусть $N = p \cdot q$, $B_1,B_2 \in \N$, т.ч. $( p - 1 )$ — $B_i$-гладкое и 
 
-	$p - 1 = \Pi p_i^{e_i}$, $\ \varphi _i^{e_i} \leqslant B_2$. A $(q-1)$ — не $B_i$-гладкое. 
+	$p - 1 = \Pi p_i^{e_i}$, $p_i^{e_i} \leqslant B_2$. A $(q-1)$ — не $B_i$-гладкое. 
 
 	Тогда алгоритм $(p-1)$ Полларда находит $p$ за время $\bigO( B_1 \lg^3 N)$ с вероятностью $1  - \frac{1}{B_1}$.
 \end{lemma}
