--- a/EllipticCurves2019/lecture9/lecture9.tex
+++ b/EllipticCurves2019/lecture9/lecture9.tex
@@ -181,7 +181,7 @@ $E_1, E_2$ изогенны над $\F_q \Leftrightarrow \#E_1(\F_q) = \#E(\F_q)
 \textit{Доказательство: Galbraith «Mathematics of Public Key Cryptography», Chapter 25}
 
 Пусть $E$ — эллиптическая кривая над $\F_q, G$ — конечная группа $E(\overbar{\F_q})$.\\
-Тогда существует элл. кривая $E'$ над $\F_q$ и сепарабельная изогения $\phi: E \rightarrow E' $, определённая над $\F_q$, степени $\#G$, т.ч. \boxed{$\ker\phi = G$}.
+Тогда существует элл. кривая $E'$ над $\F_q$ и сепарабельная изогения $\phi: E \rightarrow E' $, определённая над $\F_q$, степени $\#G$, т.ч. $\ker\phi = G$.
 
 Кроме того, если $\psi: E \rightarrow E''$ — другая сепарабельная изогения степени $\#G$ с $\ker\psi = G$, то $j(E')=j(E'')$, т.е. кривые изоморфны.\\
 Значит, образ $E$ корректно определён до изоморфизма.
@@ -195,7 +195,7 @@ Vélu описал явные формулы для $E', \phi$
 
 Пусть $E: y^2 = x^3 + ax + b$ — эллиптическая кривая над полем $K$,\; $G \subset E(\overbar{K})$ — конечная подгруппа.
 
-Сеперабельная изогения $\phi: E \rightarrow E'$ с ядром $G$ может быть записана 
+Сепарабельная изогения $\phi: E \rightarrow E'$ с ядром $G$ может быть записана 
 \[
     \phi(P) = [x(P) + \sum_{Q\in G \backslash \{0\}} (x(P+Q) - x(Q)),\;\; y(P) + \sum_{Q\in G \backslash \{0\}}(y(P+Q) - y(Q))],
 \]
@@ -208,10 +208,10 @@ Vélu описал явные формулы для $E', \phi$
 \]
 Сложность вычисления $E/G: \bigO(|G|)$
 
-Если $G$ — подгруппая большого порядка вычисления $E/G$ является трудной задачей
+Если $G$ -- подгруппа большого порядка вычисления $E/G$ является трудной задачей
 
 \subsubsection{SIDH — Supersingular Isogeny Diffie--Hellman}
-1. «Станадртный» протокол обмена ключами DH в абстрактной группе $G$: \\ 
+1. «Стандартный» протокол обмена ключами DH в абстрактной группе $G$: \\ 
 $G$ — группа, $\langle g\rangle = G$\\
 $\phi_A(x) = [a]\cdot x$ — групповой гомоморфизм
 
