--- a/EllipticCurves2020/lecture4_slides/lecture4_slides.tex
+++ b/EllipticCurves2020/lecture4_slides/lecture4_slides.tex
@@ -80,7 +80,7 @@ $E$ -- эллиптическая кривая над полем $K = \mathbb{F}
 \structure{$\triangleleft$} Доказательство: [Lang, II 2.3].\structure{$\triangleright$}
 
 \begin{corollary}
-Пусть $P \in ( {x,y}) \in E(\bar{K})$. Тогда $n P = \mathcal{O} \Leftrightarrow \psi_n^2(x) = 0$.
+Пусть $P = (x,y) \in E(\bar{K})$. Тогда $n P = \mathcal{O} \Leftrightarrow \psi_n^2(x) = 0$.
 \end{corollary}
 \end{frame}
 
