EC-2021: add slides for lectures 4-5 and labs 3,4

--- a/EllipticCurves2021/biblio.bib
+++ b/EllipticCurves2021/biblio.bib
@@ -88,6 +88,12 @@
     year={2012}
 }
 
+@book{GathenJurgen2013,
+    title={Modern computer algebra},
+    author={Von Zur Gathen, Joachim and Gerhard, J{\"u}rgen},
+    year={2013}
+}
+
 @book{DeFeo2018,
     title={Exploring Isogeny Graphs},
     author={De Feo, Luca},
