EC-2021: add lecture 6

--- a/EllipticCurves2021/beamerthemeec2020.sty
+++ b/EllipticCurves2021/beamerthemeec2020.sty
@@ -56,7 +56,6 @@
 \definecolor{box-green-color}{RGB}{77, 158, 99}
 \definecolor{box-blue-color}{RGB}{61, 147, 221}
 
-
 \setbeamercolor{structure}{fg=struct-color}
 \setbeamercolor{titlelike}{fg=title-and-section-color}
 \setbeamercolor{frametitle}{fg=title-and-section-color}
@@ -142,6 +141,9 @@
 
 }
 
+\newcommand{\ProofBegin}{ \structure{$\triangleleft$} }
+\newcommand{\ProofEnd}{ \structure{$\triangleright$} }
+\newcommand{\MyImplies}{ \structure{$\implies$} }
 
 \uselanguage{russian}
 \languagepath{russian}
