--- a/CodingTheory2021/TD14.tex
+++ b/CodingTheory2021/TD14.tex
@@ -12,6 +12,16 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english, russian]{babel}
 
+\usepackage{graphicx}
+\usepackage{url}
+\usepackage{latexsym}
+\usepackage{amscd,amsmath,amsthm}
+\usepackage{mathtools}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage[dvipsnames]{xcolor}
+\usepackage{hyperref}
+
 
 \usepackage[margin=0.73in]{geometry}
 %\usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
@@ -24,24 +34,14 @@
 \usepackage{enumerate}
 
 
-\usepackage{times,graphicx,epsfig,amsmath,latexsym,amssymb,verbatim}%,revsymb}
+
 \usepackage{algorithmicx, enumitem, algpseudocode, algorithm, caption}
-
-
-%%%%%%%%%%%%%%%%%%%%%
-% Handling comments and versions %%%
-%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\extra}[1]{}
-
-\renewcommand{\comment}[1]{\texttt{[#1]}}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% THEOREMS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\usepackage{amsmath,amssymb,amsfonts}
-\usepackage{amsthm}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{axiom}[theorem]{Axiom}
@@ -79,57 +79,57 @@
 \newcommand{\Id}{\ensuremath{I}}
 \newcommand{\transpose}{\mkern0.7mu^{\mathsf{ t}}}
 \newcommand*{\ScProd}[2]{\ensuremath{\langle#1\mathbin{,}#2\rangle}} %Scalar Product
-\newcommand*\norm[1]{\left\lVert#1\right\rVert}
 
 \pretolerance=1000
+
+\newcommand*\abs[1]{\left\lvert#1\right\rvert}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% DOCUMENT STARTS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{tikz}
-\usetikzlibrary{automata}
-\DeclareMathOperator{\Vol}{Vol}
 
 \begin{document}
 	{\noindent
-		\textsc{БФУ им. И. Канта -- Криптография на решётках}
-		\hfill {Е. Киршанова // 2020--2021\\}
+		\textsc{БФУ им. И. Канта -- Теория кодирования и сжатия информации}
+		\hfill {Е. Киршанова // 2021\\}
 	\hrule
 	\begin{center}
 		{\Large\textbf{
-				\textsc{Практика № 3} \\[5pt] {30.03.21}
-		} }
+				\textsc{Практика № 13} \\[5pt] {10.12.21}
+		} } 
 	\end{center}
 	\hrule \vspace{5mm}
 	
 	\thispagestyle{empty}
 	
 	\vspace{0.2cm}
-	\section{Лемма из лекции}
-		Докажите, что
-		\begin{enumerate}
-			\item Если $h(x)  =f(x+v)$, то 
-			\[
-				\hat{h}(y) = \hat{f}(y) \cdot e^{2\pi i \ScProd{v}{y}} \quad \forall v \in \RR^n.
-			\]
-			\item Если $h(x) = f(x) e^{2\pi i \ScProd{v}{x}}$, то 
-			\[
-				\hat{h}(y) = \hat{f}(y - v).
-			\]
-		\end{enumerate}
-		
-	\section{Гауссова функция}
-		Докажите, что $\rho = \hat{\rho}$ для $\rho(x) = e^{-\pi \norm{x}}$. \textit{Подсказка: $\int_{-\infty}^{\infty} e^{-ax^2} dx = \sqrt{\frac{\pi}{a}}$ для $a>0$.}
-		
-	\section{Следствие из лекции}
-	Докажите, что 
-	\[
-	f(L) = \det(\hat{L}) \hat{f}(\hat{L}).
-	\]
-	Подсказка: сведите к PSF для $\ZZ^n$, рассматривая коэффициенты векторов решетки при произвольном базисе $B$, рассмотрите $h(x) = f(Bx)$.
-		
 	
+\section{Лемма из лекции}
+		Пусть $X_j$ -- случайные независимые величины Бернулли, такие что $\Pr[X_j = 1] = p$. Докажите, что
 		
+		\[
+			\Pr \left[\sum_{j=1}^{\ell} X_j \bmod 2 = 1\right] = \frac{1 - (1-2p)^{\ell} }{2}.
+		\]
+		
+		Для доказательства можете использовать индукцию.
+		
+\section{Мажоритарное декодирование LDPC кода}
+	LDPC код задан проверочной матрицей
+	\[
+		H = 
+		\begin{pmatrix}
+			0 & 1 & 0 & 1 & 1 & 0 & 0 & 1 \\
+			1 & 1 & 1 & 0 & 0 & 1 & 0 & 0 \\
+			0 & 0 & 1 & 0 & 0 & 1 & 1 & 1 \\
+			1 & 0 & 0 & 1 & 1 & 0 & 1 & 0 \\
+		\end{pmatrix}
+	\]
+	\begin{questions}
+		\question Опишите граф, соответствующий коду
+		\question Декодируйте слово $y = [1 \; 1 \; 0 \; 1 \; 0 \; 1\; 0\; 1]$, используя в алгоритме декодирования мажоритарное голосование при выборе бита.
+	\end{questions}
+
+	
 \end{document}
