EC-2022: lecture 2 fix

--- a/EllipticCurves2022/beamerthemeec2020.sty
+++ b/EllipticCurves2022/beamerthemeec2020.sty
@@ -14,6 +14,13 @@
 %\usepackage{fontawesome}
 \usepackage{fontawesome5}
 
+\newfontfamily\faExt[Path="../fonts/",
+Extension = .otf,
+UprightFont = *-Regular-400,
+BoldFont  = *-Solid-900
+]{FontAwesome6-Free}
+\newcommand{\faExtCheese}{\faExt \symbol{"F7EF}}
+
 \usepackage{ragged2e}
 \usepackage{hyphenat}
 
